--- a/PrelimQuiz.html
+++ b/PrelimQuiz.html
@@ -20,6 +20,7 @@
         <h3>Create the necessary html elements that best fit for the following scenario. 3pts each, observe proper naming convention</h3>
         <ol>
             <li>Delivery date filter for an application, that cannot select previous date past today's date.</li>
+            <!-- 1pt, you forgot to remove the comment of chatgpt ahah -->
             <!--ANWER HERE-->
             <form>
                 <label for="deliveryDate">Select Delivery Date:</label>
@@ -71,6 +72,7 @@
                         <li>Timor-Leste</li>
                         <li>Vietname</li>
                     </ul>
+            <!-- 3pts -->
             <!--ANWER HERE--> 
             <form>
                 <label for="nationSelect">Select a nation:</label>
@@ -100,6 +102,7 @@
                     <li>Carrots</li>
                     <li>Onion</li>
                 </ul>
+            <!-- 3pts -->
             <!--ANWER HERE--> 
             <h1>Select Ingredients</h1>
             <form>
@@ -127,6 +130,7 @@
             <!--END ANWER HERE--> 
 
             <li>An input field to select whether a user is an administrator or not? (Boolean)</li>    
+            <!-- 1pt correct input type is checkbox -->
             <!--ANWER HERE--> 
             <form>
                 <label for="isAdmin">Are you an administrator?</label>
@@ -139,6 +143,7 @@
             <!--END ANWER HERE-->  
 
             <li>An input field to upload one or more audio related files(like mp3, wav, ogg, m4a)</li>
+            <!-- 3pts -->
             <!--ANWER HERE--> 
             <form enctype="multipart/form-data" method="post" action="upload.php">
                 <label for="audioFiles">Select Audio File(s):</label>
@@ -154,6 +159,7 @@
         <h3>Create the table as depicted in the image below. Use correct semantic elements. 15pts</h3>
 
         <p>Use the base code below for basic styling. You may use css if you know it</p>
+        <!-- 10pts, no merging of rows and columns, double check again the correct merging of rows and columns -->
         <!--ANWER HERE--> 
         <style>
         table {
